--- a/src/styles/common/_variables.scss
+++ b/src/styles/common/_variables.scss
@@ -16,5 +16,6 @@ $gradient-primary: linear-gradient(180deg, $color-primary 27.08%, $color-primary
 
 // indents
 $gap: 32px;
+$header-z: 100; 
 
 // breakpoints
